--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #splash creator
+  flutter_native_splash: ^2.3.0
+
+  # ui - widget
+  after_layout: ^1.2.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
