--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   # ui - widget
   after_layout: ^1.2.0
 
+  # ui - util
+  flutter_quill: ^9.2.1
+  url_launcher: ^6.2.2
+  flutter_keyboard_visibility: ^6.0.0
+  device_info_plus: ^9.1.1
+  super_clipboard: ^0.8.2+1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
