--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   device_info_plus: ^9.1.1
   super_clipboard: ^0.8.2+1
 
+  # data
+  shared_preferences: ^2.2.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
