--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   device_info_plus: ^9.1.1
   super_clipboard: ^0.8.2+1
+  table_calendar: ^3.0.9
 
   # data
   shared_preferences: ^2.2.2
