--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
 
   # ui - util
-  flutter_quill: ^9.2.1
+  flutter_quill: ^9.3.3
   url_launcher: ^6.2.2
   flutter_keyboard_visibility: ^6.0.0
   device_info_plus: ^9.1.1
@@ -48,6 +48,9 @@ dependencies:
 
   # data
   shared_preferences: ^2.2.2
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,7 +67,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  isar_generator: ^3.1.0+1
+  build_runner: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
